fixed a spacing problem in modal fields.

--- a/public/modules/Modal/css/modal.css
+++ b/public/modules/Modal/css/modal.css
@@ -142,10 +142,9 @@
     display: inline-block;
     background-color: #ffffff;
     color: #444;
-    padding: 0 10px;
+    padding: 10px;
     font-size: 14px;
     margin-top: 15px;
-    overflow: auto;
     border: 1px solid #DDD;
     margin-bottom: 15px;
     width: 504px;
